# sqlalchemy-artem_shumeyco

./: .env  pyproject.toml
src/: config.py  database.py  main.py  models.py
src/queries/: core.py  orm.py
