[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "My FastAPI application with SQLAlchemy"
authors = ["Ruslan <ahmedovruslan2007@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "^0.135.1", extras = ["all"]}
uvicorn = {version = "^0.38.0", extras = ["standard"]}
sqlalchemy = "^2.0.48"
asyncpg = "^0.31.0"
psycopg = {version = "^3.3.3", extras = ["binary"]}
pydantic = "^2.11.0"
pydantic-settings = "^2.9.0"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.0.0"
black = "^26.3.1"
isort = "^8.0.1"
mypy = "^1.19.1"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true